adding new | prepend: site.baseurl

--- a/thinknoack/_includes/head.html
+++ b/thinknoack/_includes/head.html
@@ -16,7 +16,7 @@
     <script src="{{"/theme/dist/js/bootstrap.js" | prepend: site.baseurl }}"></script>
     <script src="{{"/theme/dist/js/bxslider/jquery.bxslider.min.js"| prepend: site.baseurl }}"></script>
 
-    <script src="{{"/theme/dist/js/jquery.easing.min.js" prepend: site.baseurl }}"></script>
+    <script src="{{"/theme/dist/js/jquery.easing.min.js" | prepend: site.baseurl }}"></script>
 
     <script src="{{"/theme/dist/js/jquery.easy-pie-chart.js" | prepend: site.baseurl }}"></script>
     <script src="{{"/theme/dist/js/app.js" | prepend: site.baseurl }}"></script>
