--- a/thinknoack/_includes/postNav.html
+++ b/thinknoack/_includes/postNav.html
@@ -5,7 +5,7 @@
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
                 <i class="fa fa-bars"></i>
             </button>
-            <a class="navbar-brand page-scroll" href="/">
+            <a class="navbar-brand page-scroll" href="thinknoack/">
                 <span class="brand-inner"><span class="accent">Think</span>Noack</span>
             </a>
         </div>
@@ -15,16 +15,16 @@
             <ul class="nav navbar-nav">
                 <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
                 <li class="hidden">
-                    <a href="/#page-top"></a>
+                    <a href="thinknoack/#page-top"></a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="/#port">Portfolio</a>
+                    <a class="page-scroll" href="thinknoack/#port">Portfolio</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="/#skills">Skills and XP</a>
+                    <a class="page-scroll" href="thinknoack/#skills">Skills and XP</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="/#contact">Contact</a>
+                    <a class="page-scroll" href="thinknoack/#contact">Contact</a>
                 </li>
 
             </ul>
