--- a/thinknoack/_layouts/tag_index.html
+++ b/thinknoack/_layouts/tag_index.html
@@ -11,7 +11,7 @@ layout: other
       <div id="post{{count}}" class="col-xs-12 col-sm-6 col-md-6 workblock ">
         <div class="grid">
         <figure class="effect-bubba {{post.className}} ">
-          <img src="{{ post.teaser-img }}" alt="{{post.title}}"/>
+          <img src="{{ post.teaser-img | prepend: site.baseurl }}" alt="{{post.title}}"/>
           <figcaption>
             <span class="postType">{{post.className}}</span>
             <a  class="view-post" href="{{ post.url | prepend: site.baseurl }}">+</a>
@@ -20,7 +20,7 @@ layout: other
             <ul class="nav nav-pills nav-tags">
               {% for tag in post.tags %}
               <li>
-                <a href="/tag/{{ tag }}">{{ tag }}</a>
+                <a href="thinknoack/tag/{{ tag }}">{{ tag }}</a>
               </li>{% endfor %}
             </ul>          
           </figcaption>     
