--- a/thinknoack/_includes/contact.html
+++ b/thinknoack/_includes/contact.html
@@ -5,7 +5,7 @@
       <div class="col-sm-7 bio hideAn">
       	  <div class="row">
       	  	<div class="col-sm-12">         
-			        <a href="mailto:{{ site.email }}">{{ site.email }}</a>
+			        <a href="mailto:{{ site.email }}" target="_blank">{{ site.email }}</a>
 			      </div>
 			    </div>
       		<span>{{site.description}}</span>
