fixing path for postnav

--- a/thinknoack/_includes/postNav.html
+++ b/thinknoack/_includes/postNav.html
@@ -5,26 +5,26 @@
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
                 <i class="fa fa-bars"></i>
             </button>
-            <a class="navbar-brand page-scroll" href="thinknoack/">
+            <a class="navbar-brand page-scroll" href="{{"/" | prepend: site.baseurl}}">
                 <span class="brand-inner"><span class="accent">Think</span>Noack</span>
             </a>
         </div>
-
+s
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
             <ul class="nav navbar-nav">
                 <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
                 <li class="hidden">
-                    <a href="thinknoack/#page-top"></a>
+                    <a href="{{"/#page-top" | prepend: site.baseurl}}"></a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="thinknoack/#port">Portfolio</a>
+                    <a class="page-scroll" href="{{"/#port" | prepend: site.baseurl}}">Portfolio</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="thinknoack/#skills">Skills and XP</a>
+                    <a class="page-scroll" href="{{"/#skills" | prepend: site.baseurl}}">Skills and XP</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="thinknoack/#contact">Contact</a>
+                    <a class="page-scroll" href="{{"/#contact" | prepend: site.baseurl}}">Contact</a>
                 </li>
 
             </ul>
