--- a/thinknoack/_layouts/tag_index.html
+++ b/thinknoack/_layouts/tag_index.html
@@ -20,7 +20,7 @@ layout: other
             <ul class="nav nav-pills nav-tags">
               {% for tag in post.tags %}
               <li>
-                <a href="thinknoack/tag/{{ tag }}">{{ tag }}</a>
+                <a href="/thinknoack/tag/{{ tag }}">{{ tag }}</a>
               </li>{% endfor %}
             </ul>          
           </figcaption>     
