--- a/thinknoack/_includes/port.html
+++ b/thinknoack/_includes/port.html
@@ -24,7 +24,7 @@
   <div id="workContent" class="container animated allInner open">
     <div class="row siteblock">
     {% assign count = '0' %} 
-    {% for post in site.posts limit: 16 %}
+    {% for post in site.posts limit: 12 %}
     {% capture count %}{{ count | plus: '1' }}{% endcapture %}
     <div id="post{{count}}" class="col-sm-4 col-md-4 col-lg-3 workblock grid">
       <figure class="effect-bubba {{post.className}} ">
@@ -40,15 +40,21 @@
     </div>
     {% endfor %}
     </div>
-    <div class="container">
-  <div class="row">
-    {% for post in site.posts limit: 16 offset: 16 %}
-    <div class="col-sm-4 ">
-      <h2>{{ post.title }}</h2>
-      <p class="hidden-sm">{{post.teaser}}</p>
+    <div class="container" id="oldWorkSection">
+    <div class="row">
+      <div class="col-xs-12"><h2>Older Work</h2></div>
+      {% for post in site.posts limit: 12 offset: 16 %}
+ <div class="col-sm-4 col-md-4 col-lg-3 workblock grid">
+      <figure class="effect-bubba {{post.className}} ">
+        <img src="{{ post.teaser-img | prepend: site.baseurl }}" alt="{{post.title}}"/>
+        <figcaption>
+          <h3>{{ post.title }}</h3>
+          <a  class="view-post" href="{{ post.url | prepend: site.baseurl }}">View</a>
+        </figcaption>     
+      </figure>
     </div>
-    {% endfor %}
-  </div>
+      {% endfor %}
+    </div>
 </div>
   </div>
 </section>
