--- a/thinknoack/_layouts/tag_index.html
+++ b/thinknoack/_layouts/tag_index.html
@@ -8,7 +8,7 @@ layout: other
   {% for post in site.posts %}
   {% for tag in post.tags %}
   {% if tag == page.tag %}
-      <div id="post{{count}}" class="col-xs-12 col-sm-6 col-md-6 workblock ">
+      <div id="post{{count}}" class="col-xs-12 col-sm-6 col-md-6 col-lg-6 col-xl-4 workblock ">
         <div class="grid">
         <figure class="effect-bubba {{post.className}} ">
           <img src="{{ post.teaser-img | prepend: site.baseurl }}" alt="{{post.title}}"/>
