adding changes and finalizing content

--- a/thinknoack/_includes/footer.html
+++ b/thinknoack/_includes/footer.html
@@ -4,11 +4,11 @@
       <div class="row">
       <div class="col-xs-12 clearfix"> 
         <p>
-        	<small>
+        	<small class="copyright">
         		Copyright &copy; {{site.title}}  
         		<span class="disabled">{{ site.time | date: "%Y" }}</span>
         	</small>
-        	<small class="pull-right">Make Stuff</small>
+        	<small class="makestuff" >Make Stuff</small>
         </p>
       </div>
     </div>
