--- a/thinknoack/_layouts/tag_index.html
+++ b/thinknoack/_layouts/tag_index.html
@@ -18,11 +18,11 @@ layout: other
             <span class="postType">{{post.className}}</span>
             <a  class="view-post" href="{{ post.url | prepend: site.baseurl }}">+</a>
             <h2><a  href="{{ post.url | prepend: site.baseurl }}" >{{ post.title }}</a></h2>
-            <p>tags:</p>
-            <ul class="nav nav-pills nav-tags">
+            <p class="visible-sp visible-md">tags:</p>
+            <ul class="nav nav-pills nav-tags visible-sp visible-md">
               {% for tag in post.tags %}
               <li>
-                <a href="/thinknoack/tag/{{ tag }}">{{ tag }}</a>
+                <a href="/tag/{{ tag }}">{{ tag }}</a>
               </li>{% endfor %}
             </ul>          
           </figcaption>     
