--- a/thinknoack/theme/less/app.less
+++ b/thinknoack/theme/less/app.less
@@ -175,7 +175,7 @@ div.no-pad{
     background-size: cover;
     -o-background-size: cover;
     overflow: hidden;
-    position: relative;
+    //position: relative;
     .intro-body {
         display: block;
         overflow: hidden;
@@ -440,6 +440,8 @@ line-height: 30px;
     background: url(../img/bg-port.png) repeat 0 0 fixed;
     background-color: #fefefe;
     text-align: center;
+      z-index: 2;
+      position: relative;
     .container {
         width: 80%;
     }
