--- a/thinknoack/_includes/footer.html
+++ b/thinknoack/_includes/footer.html
@@ -14,3 +14,11 @@
     </div>
     </div>
 </footer>
+<script type='text/javascript'>
+(function (d, t) {
+  var bh = d.createElement(t), s = d.getElementsByTagName(t)[0];
+  bh.type = 'text/javascript';
+  bh.src = '//www.bugherd.com/sidebarv2.js?apikey=3zpelt22odjd3utiuf60ug';
+  s.parentNode.insertBefore(bh, s);
+  })(document, 'script');
+</script>
