--- a/thinknoack/_includes/head.html
+++ b/thinknoack/_includes/head.html
@@ -33,6 +33,12 @@
 
     <script src="{{"/theme/dist/js/jquery.easy-pie-chart.js" | prepend: site.baseurl }}"></script>
     <script src="{{"/theme/dist/js/app.js" | prepend: site.baseurl }}"></script>
+
+
+    <!--happybrowser-->
+    <link href="{{"/happybrowser/happybrowser.css"| prepend: site.baseurl }}" rel="stylesheet" type="text/css">
+    <script src="{{"/happybrowser/bowser.js" | prepend: site.baseurl }}"></script>
+    <script src="{{"/happybrowser/happybrowser-nojquery.js" | prepend: site.baseurl }}"></script>
         <!-- Custom Fonts -->
     
     <link href="{{"/theme/dist/fonts/font-awesome-4.2.0/css/font-awesome.min.css"| prepend: site.baseurl }}" rel="stylesheet" type="text/css">
