adding small fixes

--- a/thinknoack/_includes/intro.html
+++ b/thinknoack/_includes/intro.html
@@ -18,7 +18,7 @@
             </div>
         </div>
           <a href="#port" class="btn btn-circle page-scroll">
-              <i class="fa fa-angle-double-down animated"></i>
+              <i class="fa fa-arrow-circle-o-down animated"></i>
           </a>
 
     </div>
