adding analytics script

--- a/thinknoack/_layouts/post.html
+++ b/thinknoack/_layouts/post.html
@@ -52,7 +52,7 @@
          </div>
         </div>
     {% include footer.html %}
-    {% include map.html %}
+    {% include scripts.html %}
 
   </body>
 </html>
