--- a/thinknoack/_layouts/front.html
+++ b/thinknoack/_layouts/front.html
@@ -9,6 +9,7 @@
     {% include skills.html %}  
     {% include contact.html %}
     {% include footer.html %}
+    {% include scripts.html %}
 </body>
 
 </html>
