--- a/thinknoack/_includes/contact.html
+++ b/thinknoack/_includes/contact.html
@@ -8,7 +8,7 @@
 			        <a href="mailto:{{ site.email }}" target="_blank">{{ site.email }}</a>
 			      </div>
 			    </div>
-      		<span>{{site.description}}</span>
+      		<span>{{site.contactdescription}}</span>
       	</div>
     </div>
   </div>
