hiding page-scroll on mobile

--- a/thinknoack/theme/less/app.less
+++ b/thinknoack/theme/less/app.less
@@ -1043,6 +1043,9 @@ body {
             color: #FFF;
         }
     }
+    .page-scroll{
+        display: none;
+    }
 
     .post-img{
         margin-top: -50px;
