changing layout and styles

--- a/thinknoack/_includes/intro.html
+++ b/thinknoack/_includes/intro.html
@@ -1,16 +1,16 @@
 <header class="intro">
-    <div class="chev hideAn animated">
+    <div class="hideAn animated">
       <div class="inner"></div>
     </div>
     <div class="intro-body ">
         <div class="container hideAn animated">
           <div class="row">
-                <div class="col-sm-7">
+                <div>
                   <h1 class="brand-heading">{{ page.intro }}</h1>
                 </div>
               </div>
             <div class="row">
-                <div class="col-sm-5">
+                <div>
                     <div class="introDes">
                        {{ page.subTeaser }}
                     </div>
