--- a/thinknoack/_layouts/front.html
+++ b/thinknoack/_layouts/front.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	{% include head.html %}
-	<body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
+	<body id="page-top" class="front" data-spy="scroll" data-target=".navbar-fixed-top">
 	    {% include nav.html %}
 	    {% include intro.html %}
 	    {% include port.html %}  
