--- a/thinknoack/_layouts/post.html
+++ b/thinknoack/_layouts/post.html
@@ -32,7 +32,7 @@
           
           <div class="col-sm-5 post-text">
             <div class="col-sm-12">&nbsp;</div>
-            <div class="scrollFix">
+            <div>
               <h3>{{page.teaser}}</h3>
               <p>{{content}}</p>
                 {% if tag == page.tag %}
