--- a/thinknoack/_includes/port.html
+++ b/thinknoack/_includes/port.html
@@ -2,7 +2,7 @@
 <section id="port" class="content-section">
     <div class="container">
       <div class="row">
-        <div class="col-lg-12">
+        <div class="col-lg-12 port-head">
           <div class="row">
             <div class="col-xs-12 col-sm-6">
               <h2>Portfolio</h2>
@@ -32,35 +32,37 @@
     {% assign count = '0' %} 
     {% for post in site.posts limit: 16 %}
     {% capture count %}{{ count | plus: '1' }}{% endcapture %}
-    <div id="post{{count}}" class="col-sm-4 col-md-4 col-lg-3 workblock grid">
-      <figure class="effect-bubba {{post.className}} ">
-        <img src="{{ post.teaser-img | prepend: site.baseurl }}" alt="{{post.title}}"/>
-        <figcaption>
-          <span class="postType">{{post.className}}</span>
-          <h2>{{ post.title }}</h2>
-          <p class="hidden-sm">{{post.teaser}}</p>
-          <small class="client"><span>Client:</span> {{post.client}}</small>
-          <a  class="view-post" href="{{ post.url | prepend: site.baseurl }}">View</a>
-        </figcaption>     
-      </figure>
-    </div>
+      <div id="post{{count}}" class="col-sm-4 col-md-4 col-lg-3 workblock grid">
+        <figure class="{{post.className}} ">
+          <img src="{{ post.teaser-img | prepend: site.baseurl }}" alt="{{post.title}}"/>
+          <figcaption>
+            <h2>{{ post.title }}</h2>
+            <p class="hidden-sm">{{post.teaser}}</p>
+            <div class="clearfix">
+              <small class="client"><span>Client:</span> {{post.client}}</small>
+              <small class="postType">{{post.className}}</small>
+            </div>
+            <a  class="view-post" href="{{ post.url | prepend: site.baseurl }}">View</a>
+          </figcaption>     
+        </figure>
+      </div>
     {% endfor %}
     </div>
-    <div class="container" id="oldWorkSection">
-    <div class="row">
-      <div class="col-xs-12"><h2>Older Work</h2></div>
-      {% for post in site.posts limit: 12 offset: 16 %}
- <div class="col-sm-4 col-md-4 col-lg-3 workblock grid">
-      <figure class="effect-bubba {{post.className}} ">
-       <!--  <img src="{{ post.teaser-img | prepend: site.baseurl }}" alt="{{post.title}}"/> -->
-        <figcaption>
-          <h3>{{ post.title }}</h3>
-          <a  class="view-post" href="{{ post.url | prepend: site.baseurl }}">View</a>
-        </figcaption>     
-      </figure>
+    <div id="oldWorkSection">
+      <div class="row">
+        <div class="port-older-work-header"><h2>Older Work</h2></div>
+        {% for post in site.posts offset: 16 %}
+        <div class="col-sm-4 col-md-4 col-lg-3 workblock grid">
+          <figure class="effect-bubba {{post.className}} ">
+           <!--  <img src="{{ post.teaser-img | prepend: site.baseurl }}" alt="{{post.title}}"/> -->
+            <figcaption>
+              <h3>{{ post.title }}</h3>
+              <a  class="view-post" href="{{ post.url | prepend: site.baseurl }}">View</a>
+            </figcaption>     
+          </figure>
+        </div>
+        {% endfor %}
+      </div>
     </div>
-      {% endfor %}
-    </div>
-</div>
   </div>
 </section>
