--- a/thinknoack/_layouts/tag_index.html
+++ b/thinknoack/_layouts/tag_index.html
@@ -4,30 +4,25 @@ layout: not-front
 <h2 class="post-title">{{page.tagpost_title}}</h2>
 <div class="row">
 <section id="workSection" class="show">
-  <div id="workContent" class="container tagsPage">
+  <div id="workContent" class="tagsPage">
   {% assign count = '0' %} 
   {% for post in site.posts %}
   {% for tag in post.tags %}
   {% if tag == page.tag %}
   {% capture count %}{{ count | plus: '1' }}{% endcapture %}
-      <div id="post{{count}}" class="col-xs-12 col-sm-6 col-md-6 col-lg-6 col-xl-4 workblock ">
-        <div class="grid">
-        <figure class="effect-bubba {{post.className}} ">
+      <div id="post{{count}}" class="col-sm-4 col-md-4 col-lg-3 workblock grid">
+        <figure class="{{post.className}} ">
           <img src="{{ post.teaser-img | prepend: site.baseurl }}" alt="{{post.title}}"/>
           <figcaption>
-            <span class="postType">{{post.className}}</span>
-            <a  class="view-post" href="{{ post.url | prepend: site.baseurl }}">+</a>
-            <h2><a  href="{{ post.url | prepend: site.baseurl }}" >{{ post.title }}</a></h2>
-            <p class="visible-sp visible-md">tags:</p>
-            <ul class="nav nav-pills nav-tags visible-sp visible-md">
-              {% for tag in post.tags %}
-              <li>
-                <a href="/tag/{{ tag }}">{{ tag }}</a>
-              </li>{% endfor %}
-            </ul>          
+            <h2>{{ post.title }}</h2>
+            <p class="hidden-sm">{{post.teaser}}</p>
+            <div class="clearfix">
+              <small class="client"><span>Client:</span> {{post.client}}</small>
+              <small class="postType">{{post.className}}</small>
+            </div>
+            <a  class="view-post" href="{{ post.url | prepend: site.baseurl }}">View</a>
           </figcaption>     
         </figure>
-      </div>
       </div>
   {% endif %}
   {% endfor %}
