--- a/thinknoack/theme/src/less/app.less
+++ b/thinknoack/theme/src/less/app.less
@@ -4,7 +4,7 @@
 @import "annimations.less";
 @import "elements.less";
 
-@import "hoverStyles.less";
+//@import "hoverStyles.less";
 
 body {
     width: 100%;
@@ -179,38 +179,42 @@ div.no-pad{
         overflow: hidden;
         height: 100%;
         z-index: 900;
+        .container{
+            margin-top: 10%;
+            padding: 40px 0;
+
+        }
         .brand-heading {
             font-size: 50px;
-            margin-top: 30%;
         }
         .introDes{
             font-size: 22px;
         }
     }
 }
+.front{
+    .intro, .postIntro {
+        .intro-body {
+            .container{
+                border: 1px solid #FFF;
+                max-width: 460px;
+                border: 1px solid #FFF;
+                width: 97%;
+                padding: 30px 30px;
+
+            }
+        }
+    }
+    .intro .intro-body{
+        overflow: visible;
+    } 
+}
  .postIntro {
     .intro-body .brand-heading{
         margin-top: 60px;
     }
  }
-// .chev {
-//     position: relative;
-//     top: 0;
-//     bottom: 0;
-//     .inner{
-//         position: absolute;
-//         left: 60%;
-//         top: -580px;
-//         bottom: -1070px;
-//         background: url(../img/img-halftone.png) no-repeat 70% 50% fixed; 
-//         background-color:fade(#008686, 90%);
-//         width: 1400px;
-//         transform: rotate(40deg);
-//         border: 90px solid #008686;
-//         box-shadow: 0 0 10px 0px rgba(0,0,0,0.6);
-//         .opacity(0.2);
-//     }
-// }
+
 
 .line{
 position: absolute;
@@ -421,7 +425,6 @@ line-height: 30px;
 // sections and section wrappers
 .content-section {
     padding: 50px 0;
-    overflow: hidden;
 }
 .post .content-section {
     padding: 0 0 50px;
@@ -442,14 +445,16 @@ line-height: 30px;
     z-index: 2;
     position: relative;
     padding: 20px;
+    .port-head{
+        padding: 0;
+    }
     .container {
-        width: 100%;
+        padding: 0;
         h2 {
             color: #333;
             font-size: 40px;
             font-weight: 700;
             margin: 0;
-            //text-transform: none;
         }
         .filters{
             text-align: right;
@@ -475,63 +480,109 @@ line-height: 30px;
             text-decoration: underline;
         }
     }
-    // #design{
-    //     border-color: #6B0077;
-    //     color:#6B0077;
-    //     &:hover{
-    //         background: fade(#6B0077, 10%);
-    //         color: #fff;
-
-    //     }        
-    // }
-    // #site{
-    //     border-color: #8D9D00;
-    //     color:#8D9D00;
-    //     &:hover{
-    //         background: fade(#8D9D00, 10%);
-    //         color: #fff;
-    //     }
-    // }
+    .client{
+        font-size: 12px;
+        line-height: 16px;
+        display: block;
+        color: fade(#fff, 80%);
+        padding: 10px 0;
+        float: left;
+    }
+    .postType{
+        text-align: right;
+        width: 100%;
+        display: block;
+        float: left;
+        display: block;
+    }
 }
-
+#workSection {
+    #oldWorkSection{
+        .port-older-work-header{
+            padding: 10px;
+            h2{
+                margin: 0;
+            }
+        }
+        .grid figure figcaption{
+            height: 70px;
+            h3{
+                margin: 0;
+                font-size: 18px;
+            }
+        }
+    }
+}
 
 #workSection {
     max-height: 0;
     overflow: hidden;
-    background: #d8d8d8;
-    //box-shadow: inset 0 0 33px -10px #333;
+     background: url(../img/bg-post.png) repeat 0% 0% fixed;
     .transition(all 1s ease);
     .container{
         padding: 0;
-        width: 100%;
-        max-width: 100%;
+        max-width: 80%;
         }
     .grid {
-        padding: 0;
-        border: 3px solid #dadada;
+            padding: 10px;
+            border: none;
+        figure{
+            padding: 0;
+            box-shadow: 0px 0px 7px -2px rgba(0, 0, 0, 0.3);
+            background-color: rgb(0,0,0);
 
-        .client{
-            position: absolute;
-            background: fade(#000, 60%);
-            display: block;
-            padding: 15px 20px;
-            width: 100%;
-            left: 0;
-            color: #fff;
-            bottom: 0;
-            font-size: 12px;
-            .opacity(1);
-            .transition(all 0.2s ease);
-            span{
-                color: @primary;
+            figcaption{
+                padding: 15px;
+                background: #fff;
+                height: 120px;
+                h2{
+                        font-size: 17px;
+                        margin-bottom: 10px;
+                        color: @primary;
+                }
+                p{
+                    font-size: 15px;
+                    margin-bottom: 5px;
+                    line-height: 18px;
+                }
+
+                .view-post{
+                    position: absolute;
+                    top: 0;
+                    bottom: 0;
+                    right: 0;
+                    left: 0;
+                    text-indent: -90000em;
+                }
+            }
+             &:hover {
+                img{opacity: 0.9;}
+                figcaption{
+                    h2{
+                        color: @dark;
+                    }
+                }
+            }
+            .client{
+                font-size: 12px;
+                line-height: 16px;
+                display: block;
+                float: left;
+                width: 70%;
+            }
+            .postType{
+                text-align: right;
+                width: 30%;
+                display: block;
+                float: left;
             }
         }
     }
 
-&.show {
-    max-height: 9000px;
-    .transition(all 1s ease);
-}
+    &.show {
+        max-height: 9000px;
+        .transition(all 1s ease);
+    }
     .container#oldWorkSection{
         background: url(../img/bg-post.png) repeat 0% 0% fixed;
 
@@ -578,33 +629,9 @@ line-height: 30px;
         }
 
         .workblock.grid{
-          height: 100px;
-          border-color:#505050;
-          overflow: hidden;
-          figure.effect-bubba{
-              background: rgba(210, 210, 210, 0.09);
-            height: 100px;
-            figcaption {
-              &::after,
-                &::before{
-                  border: none;
-                  .transition(none);
-              }
-            }
-            &:hover {
-                background: none;
-                img{
-                      opacity: 0.5;
-                }
-                figcaption{
-            
-                          &::after,
-                          &::before{
-                            border: none;
-                            .transition(none);
-                          }
-                    }
-                }
+            padding: 10px;
+            border: none;
+          figure{
           }
         }
 
@@ -627,39 +654,41 @@ line-height: 30px;
     }
 }
 
-figure.effect-bubba.design {
-    background:  #6B0077;
+
+
+
+
+//posts
+
+.post{
+    background: url(../img/bg-post.png) repeat 0% 0% fixed;
+    background-color: #fefefe;
+    h1 .client{
+        font-size: 14px;
+        line-height: 17px;
+        display: block;
+        color: #fff;
+    }
+    .nav-tags {
+        padding:0;
+
+        a{
+                margin-right: 5px;
+                margin-bottom: 10px;
+                padding: 1px 10px;
+                background: @primary;
+                border-radius: 0;
+                color: #FFF;
+                .transform(all 0.3s ease);
+                &:hover{
+                    background: rgba(0, 0, 0, 0.3);
+                }
+
+            }
+    }
+
+
 }
-
-figure.effect-bubba.site {
-    background:  #063A00;
-}
-
-figure.effect-bubba .postType{
-    position: absolute;
-    text-align: right;
-    left: 0;
-    right: 30px;
-    top: 5px;
-    bottom: 0;
-    text-transform: none;
-    .opacity(0);
-    .transition(all 0.5s ease);
-    font-size: 14px;
-}
-
-figure.effect-bubba:hover .postType{
-    .opacity(1);
-}
-
-
-#workSection .grid figure.effect-bubba:hover .client{
-    .opacity(0);
-}
-
-
-
-
 
 //tags page
         @media (min-width: 1201px){
@@ -668,161 +697,68 @@ figure.effect-bubba:hover .postType{
             }
         }
 
-.tagsPage{
-    .grid {
-        margin-bottom: 20px;
-        padding: 0;
-        figure figcaption > a.view-post{
-            position: absolute;
-            text-indent: 0;
-            font-size: 20px;
-            opacity: 1;
-            display: block;
-            color: @primary;
-            font-weight: 500;
-            bottom: -14px;
-            top: auto;
-            padding: 25px;
-            width: 60px;
-            background: rgba(255, 255, 255, 0.9);
-            height: 60px;
-            border-radius: 30px;
-            right: -7px;
-            text-align: center;
-            line-height: 15px;
-            left: auto;
-            &:hover{
-                background: rgba(0,0,0,0.5);
-            }
-        }
+// .tagsPage{
+//     .grid {
+//         margin-bottom: 20px;
+//         padding: 0;
+//         figure figcaption > a.view-post{
+//             position: absolute;
+//             text-indent: 0;
+//             font-size: 20px;
+//             opacity: 1;
+//             display: block;
+//             color: @primary;
+//             font-weight: 500;
+//             bottom: -14px;
+//             top: auto;
+//             padding: 25px;
+//             width: 60px;
+//             background: rgba(255, 255, 255, 0.9);
+//             height: 60px;
+//             border-radius: 30px;
+//             right: -7px;
+//             text-align: center;
+//             line-height: 15px;
+//             left: auto;
+//             &:hover{
+//                 background: rgba(0,0,0,0.5);
+//             }
+//         }
 
-        figure.effect-bubba {
-            overflow: hidden;
-            position: relative;
-            &.design {
-                .nav-tags a{
-                    background: rgba(255, 255, 255, 0.78);
-                    color:  #6B0077;
-                    &:hover{
-                        color: #fff;
-                    }
-                }
-                &:hover{
-                    background:  #6B0077;
-                     h2 a{
-                        background: rgba(255,255,255,0.8);
-                        color: #6B0077;
+       
 
-                        &:hover{
-                            background:  rgba(0, 0, 0, 0.5);
-                            color: #fff;
-                        }     
-                    }
-                    .nav-tags a{
-                        background: #fff;
-                        &:hover{
-                           background:  rgba(0, 0, 0, 0.5);
-                        }
-                    }
-                    img{
-                        .opacity(0.7);
-                    }
-                }
-            }
+//         .nav-tags {
+//             padding:0 10px 20px 10px;
 
-            &.site {
+//             a{
+//                     margin-right: 5px;
+//                     margin-bottom: 8px;
+//                     padding: 1px 10px;
+//                     background: rgba(255, 255, 255, 0.3);
+//                     border-radius: 0;
+//                     color: #FFF;
+//                     .transform(all 0.3s ease);
+//                     &:hover{
+//                         background: rgba(0, 0, 0, 0.3);
+//                     }
+//                 }
+//             }
+//             @media(min-width:767px) and (max-width:980px){
+//                 a{
+//                     font-size: 11px;
+//                 }
+//                 h2{
+//                     font-size: 18px;
+//                 }
+//             }
+//             @media(max-width:767px){
+//                 a{
+//                     font-size: 12px;
+//                 }
+//             }
 
-                .nav-tags a{
-                    background: rgba(255, 255, 255, 0.78);
-                    color:  #063A00;
-                    &:hover{
-                        color: #fff;
-                    }
-                }
-            &:hover{   
-                    background:  #063A00;
-                    h2 a{
-                        background: rgba(255,255,255,0.8);
-                        color:  #063A00;
-                        &:hover{
-                            background:  rgba(0, 0, 0, 0.5);
-                            color: #fff;
-                        }          
-                    }
-                    .nav-tags a{
-                        background: #fff;
-                        &:hover{
-                           background:  rgba(0, 0, 0, 0.5);
-                        }
-                    }
-                    img{
-                        .opacity(0.7);
-                    }
-                }
-
-            }
-        }
-        figure.effect-bubba figcaption::before,
-        figure.effect-bubba figcaption::after {
-            .opacity(1);
-            -webkit-transform: scale(1);
-            transform: scale(1);
-        }
-    
-        figure.effect-bubba h2,
-        figure.effect-bubba p,
-        figure.effect-bubba .nav-tags,
-        figure.effect-bubba .postType {
-            font-size: 16px;
-            .opacity(1);
-            -webkit-transform: translate3d(0,0,0);
-            transform: translate3d(0,0,0);
-            a{
-                color: #fff;
-            }
-        }
-        figure.effect-bubba img {
-            .opacity(0.4);
-        }
-
-        figure.effect-bubba p{
-            margin: 0;
-            padding: 10px 10px 0;
-            font-size: 12px;
-        }
-
-        .nav-tags {
-            padding:0 10px 20px 10px;
-
-            a{
-                    margin-right: 5px;
-                    margin-bottom: 8px;
-                    padding: 1px 10px;
-                    background: rgba(255, 255, 255, 0.3);
-                    border-radius: 0;
-                    color: #FFF;
-                    .transform(all 0.3s ease);
-                    &:hover{
-                        background: rgba(0, 0, 0, 0.3);
-                    }
-                }
-            }
-            @media(min-width:767px) and (max-width:980px){
-                a{
-                    font-size: 11px;
-                }
-                h2{
-                    font-size: 18px;
-                }
-            }
-            @media(max-width:767px){
-                a{
-                    font-size: 12px;
-                }
-            }
-
-    }
-}
+//     }
+// }
 
 
 #contact{
@@ -861,7 +797,7 @@ figure.effect-bubba:hover .postType{
 //footer
 footer {
     background: #292929;
-    padding: 20px 0;
+    padding: 50px 0;
     color: #FFF;
     border-bottom: 10px solid @primary;
     p {
@@ -884,38 +820,6 @@ footer {
 
 
 
-
-//posts
-
-.post{
-    background: url(../img/bg-post.png) repeat 0% 0% fixed;
-    background-color: #fefefe;
-    .nav-tags {
-        padding:0;
-
-        a{
-                margin-right: 5px;
-                margin-bottom: 10px;
-                padding: 1px 10px;
-                background: @primary;
-                border-radius: 0;
-                color: #FFF;
-                .transform(all 0.3s ease);
-                &:hover{
-                    background: rgba(0, 0, 0, 0.3);
-                }
-
-            }
-    }
-
-    .client{
-        font-size: 12px;
-        line-height: 16px;
-        display: block;
-        color: fade(#fff, 80%);
-        padding: 10px 0;
-    }
-}
 
 
 .post-header-img {
@@ -987,7 +891,6 @@ footer {
             padding: 9px 0;
             font-size: 16px;
             font-weight: 500;
-            //text-transform: uppercase;
             color: #FFF;
 
             .employer.dis{
@@ -1029,46 +932,41 @@ body {
     .intro, .postIntro {
         background-attachment: scroll;
     }
-    // .chev{
-    //     display: none;
-    // }
 }
 
 
 @media(min-width:767px) {
-    .scrollFix{
-        h3{
-            background: rgba(0, 0, 0, 0.4);
-            margin-top: 10px;
-            padding: 20px;
-            color: #FFF;
-        }
-    }
+    // .scrollFix{
+    //     h3{
+    //         background: rgba(0, 0, 0, 0.4);
+    //         margin-top: 10px;
+    //         padding: 20px;
+    //         color: #FFF;
+    //     }
+    // }
 
     .post-img{
         margin-top: -50px;
     }
-    .scrollFixTop{
-        position: relative;
-    }
-    .scrollFixTop,
-    .scrollFixBottom{
-        position: fixed;
-        width: 32%;
-        max-width: 545px;
-    }
+    // .scrollFixTop{
+    //     position: relative;
+    // }
+    // .scrollFixTop,
+    // .scrollFixBottom{
+    //     position: fixed;
+    //     width: 32%;
+    //     max-width: 545px;
+    // }
 
-    .scrollFixTop{
-        top: 50px;
-    }
+    // .scrollFixTop{
+    //     top: 50px;
+    // }
 
-    .scrollFixBottom.scrollFixTop{
-        //top: auto;
-        bottom: 90px;
-    }
+    // .scrollFixBottom.scrollFixTop{
+    //     bottom: 90px;
+    // }
     p{
         margin: 0 0 35px;
-       //font-size: 20px;
         line-height: 1.6;
     }
 
@@ -1132,6 +1030,7 @@ body {
         border:none;
         .navbar-toggle{
             color: @primary;
+            margin-right: 0;
             &:hover{
                 color: lighten(@primary, 10%)
             }
@@ -1146,24 +1045,25 @@ body {
     }
     .intro,
     .postIntro{
+
         .intro-body {
+            .container{
+                margin-top: 10px;
+            }
                 .brand-heading {
                     margin-top: 0;
-                    font-size: 30px;
+                    font-size: 23px;
                 }
+                .introDes{
+                    font-size: 17px;
+                }
+
 
             }
     }
     .intro,
     .postIntro {
         height: 70%;
-    }
-    #oldWorkSection{display: none;}
-        #workSection{
-        .grid {
-            padding: 0;
-            border: 3px solid @primary;
-        }
     }
 
 
