making changes to images

--- a/thinknoack/_includes/intro.html
+++ b/thinknoack/_includes/intro.html
@@ -4,12 +4,12 @@
     </div>
     <div class="intro-body ">
         <div class="container hideAn animated">
-          <div class="row">
+          <div>
                 <div>
                   <h1 class="brand-heading">{{ page.intro }}</h1>
                 </div>
               </div>
-            <div class="row">
+            <div>
                 <div>
                     <div class="introDes">
                        {{ page.subTeaser }}
