adding new design and adjusting all layouts

--- a/thinknoack/_layouts/post.html
+++ b/thinknoack/_layouts/post.html
@@ -48,6 +48,8 @@
           <div class="col-sm-7 post-img">
             <img src="{{page.post-img | prepend: site.baseurl }}" alt="{{page.title}}" />
             {% if page.post-img2 %} <img src="{{page.post-img2 | prepend: site.baseurl }}" alt="{{page.title}}" />{% endif %}
+            {% if page.post-img3 %} <img src="{{page.post-img3 | prepend: site.baseurl }}" alt="{{page.title}}" />{% endif %}
+            {% if page.post-img4 %} <img src="{{page.post-img4 | prepend: site.baseurl }}" alt="{{page.title}}" />{% endif %}
           </div>
          </div>
         </div>
