--- a/thinknoack/_includes/head.html
+++ b/thinknoack/_includes/head.html
@@ -5,13 +5,13 @@
     <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
     <meta name="description" content="{{ site.description }}">
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
-    <link rel="apple-touch-icon" sizes="60x60" href="{{"/theme/dist/apple-touch-icon-60x60.png?v=2" | prepend: site.baseurl }}">
-    <link rel="apple-touch-icon" sizes="180x180" href="{{"/theme/dist/apple-touch-icon-180x180.png?v=2" | prepend: site.baseurl }}">
-    <link rel="icon" type="image/png" href="{{"/theme/dist/android-chrome-192x192.png?v=2" | prepend: site.baseurl }}" sizes="192x192">
-    <link rel="icon" type="image/png" href="{{"/theme/dist/favicon-32x32.png?v=2?v=2" | prepend: site.baseurl }}" sizes="32x32">
-    <link rel="icon" type="image/png" href="{{"/theme/dist/favicon-96x96.png?v=2" | prepend: site.baseurl }}" sizes="96x96">
-    <link rel="icon" type="image/png" href="{{"/theme/dist/favicon-16x16.png?v=2" | prepend: site.baseurl }}" sizes="16x16">
-    <link rel="icon" type="image/png" href="{{"/theme/dist/favicon.ico?v=2" | prepend: site.baseurl }}">
+    <link rel="apple-touch-icon" sizes="60x60" href="{{"/theme/dist/img/apple-touch-icon-60x60.png?v=2" | prepend: site.baseurl }}">
+    <link rel="apple-touch-icon" sizes="180x180" href="{{"/theme/dist/img/apple-touch-icon-180x180.png?v=2" | prepend: site.baseurl }}">
+    <link rel="icon" type="image/png" href="{{"/theme/dist/img/android-chrome-192x192.png?v=2" | prepend: site.baseurl }}" sizes="192x192">
+    <link rel="icon" type="image/png" href="{{"/theme/dist/img/favicon-32x32.png?v=2?v=2" | prepend: site.baseurl }}" sizes="32x32">
+    <link rel="icon" type="image/png" href="{{"/theme/dist/img/favicon-96x96.png?v=2" | prepend: site.baseurl }}" sizes="96x96">
+    <link rel="icon" type="image/png" href="{{"/theme/dist/img/favicon-16x16.png?v=2" | prepend: site.baseurl }}" sizes="16x16">
+    <link rel="icon" type="image/png" href="{{"/theme/dist/img/favicon.ico?v=2" | prepend: site.baseurl }}">
     <!--main scripts-->
     <script src="{{"/theme/dist/js/app.js" | prepend: site.baseurl }}"></script>
     <!--happybrowser-->
