changing the footer link to github

--- a/thinknoack/_includes/footer.html
+++ b/thinknoack/_includes/footer.html
@@ -8,7 +8,7 @@
         		Copyright &copy; {{site.title}}  
         		<span class="disabled">{{ site.time | date: "%Y" }}</span>
         	</small>
-        	<a href="https://plus.google.com/100642687102934226271" rel="publisher"><small class="makestuff" >Make Stuff</small></a>
+        	<a href="https://github.com/thinknoack/" rel="publisher"><small class="makestuff" >Make Stuff</small></a>
         </p>
       </div>
     </div>
