adding new changes and new posts

--- a/thinknoack/_includes/head.html
+++ b/thinknoack/_includes/head.html
@@ -20,7 +20,7 @@
     <script src="{{"/theme/happybrowser/happybrowser-nojquery.js" | prepend: site.baseurl }}"></script>
     <!-- Custom Fonts -->
     <link href="{{"/theme/dist/fonts/font-awesome-4.2.0/css/font-awesome.min.css"| prepend: site.baseurl }}" rel="stylesheet" type="text/css">
-    <link href='https://fonts.googleapis.com/css?family=Quattrocento+Sans:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
+    <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500" rel="stylesheet">
     <!--site css-->
     <link rel="stylesheet" href="{{ "/theme/dist/css/app.css" | prepend: site.baseurl }}">
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
