--- a/thinknoack/_includes/intro.html
+++ b/thinknoack/_includes/intro.html
@@ -1,24 +1,24 @@
 <header class="intro">
     <div class="hideAn animated">
-      <div class="inner"></div>
+        <div class="inner"></div>
     </div>
     <div class="intro-body ">
         <div class="container hideAn animated">
-          <div>
+            <div>
                 <div>
-                  <h1 class="brand-heading">{{ page.intro }}</h1>
+                    <h1 class="brand-heading">{{ page.intro }}</h1>
                 </div>
-              </div>
+            </div>
             <div>
                 <div>
                     <div class="introDes">
-                       {{ page.subTeaser }}
+                        {{ page.subTeaser }}
                     </div>
                 </div>
             </div>
         </div>
-          <a href="#port" class="btn btn-circle page-scroll">
-              <i class="fa fa-angle-down animated"></i>
-          </a>
+        <a href="#scroll-intro" id="scroll-intro" class="btn btn-circle page-scroll">
+            <i class="fa fa-angle-down animated"></i>
+        </a>
     </div>
 </header>
