--- a/thinknoack/_includes/skills.html
+++ b/thinknoack/_includes/skills.html
@@ -1,137 +1,123 @@
 <div id="skills">
-  <div class="container">
- 
-<div class="row">
-<div class="col-sm-6">
-   <h2>Skills</h2>
-  
-  <div class="progress-label">HTML</div>
-  <div class="progress">
-    <div id="html-chart" class="progress-bar" role="progressbar">
-      <span class="sr-only">60% Complete</span>
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-6">
+                <h2>Skills</h2>
+                <div class="progress-label">HTML</div>
+                <div class="progress">
+                    <div id="html-chart" class="progress-bar" role="progressbar">
+                        <span class="sr-only">60% Complete</span>
+                    </div>
+                </div>
+                <ul class="skills-explained clearfix">
+                    <li>Good old fashioned HTML</li>
+                </ul>
+                <div class="progress-label">CSS</div>
+                <div class="progress">
+                    <div id="css-chart" class="progress-bar" role="progressbar">
+                        <span class="sr-only">60% Complete</span>
+                    </div>
+                </div>
+                <ul class="skills-explained clearfix">
+                    <li>CSS</li>
+                    <li>LESS/SASS</li>
+                    <li>Responsive</li>
+                    <li>BEM</li>
+                    <li>Bootstrap/Foundation/Material</li>
+                </ul>
+                <div class="progress-label">Javascript</div>
+                <div class="progress">
+                    <div id="js-chart" class="progress-bar" role="progressbar">
+                        <span class="sr-only">60% Complete</span>
+                    </div>
+                </div>
+                <ul class="skills-explained clearfix">
+                    <li>Jquery</li>
+                    <li>React.js</li>
+                    <li>Grunt/Gulp</li>
+                </ul>
+                <div class="progress-label">Design</div>
+                <div class="progress">
+                    <div id="design-chart" class="progress-bar" role="progressbar">
+                        <span class="sr-only">60% Complete</span>
+                    </div>
+                </div>
+                <ul class="skills-explained clearfix">
+                    <li>Photoshop</li>
+                    <li>Illustrator</li>
+                    <li>Photography</li>
+                    <li>Printmaking</li>
+                    <li>UX/UI</li>
+                </ul>
+                <div class="progress-label">CMS</div>
+                <div class="progress">
+                    <div id="cms-chart" class="progress-bar" role="progressbar">
+                        <span class="sr-only">60% Complete</span>
+                    </div>
+                </div>
+                <ul class="skills-explained clearfix">
+                    <li>Drupal</li>
+                    <li>Wordpress</li>
+                    <li>Jekyll/Liquid</li>
+                    <li>Site Building</li>
+                    <li>Theming</li>
+                </ul>
+                <div class="progress-label">Life</div>
+                <div class="progress">
+                    <div id="life-chart" class="progress-bar" role="progressbar">
+                        <span class="sr-only">75% Complete</span>
+                    </div>
+                </div>
+                <ul class="skills-explained clearfix">
+                    <li>Husband/Dad</li>
+                    <li>Pet Owner</li>
+                    <li>Pinball</li>
+                    <li>Outside Stuff</li>
+                </ul>
+            </div>
+            <div class="col-sm-5 col-sm-offset-1">
+                <h2>Experience</h2>
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        Current Position  -
+                        <span class="employer">
+                            <a href="http://www.squishymedia.com/" title="Squishymedia">Squishymedia</a>
+                        </span>
+                    </div>
+                    <div class="panel-body">
+                        Senior Frontend Developer &amp; UX Designer
+                    </div>
+                    <div class="panel-heading">
+                        Oct. 2012 - Jan. 2014 -
+                        <span class="employer">
+                            <a href="http://www.squishymedia.com/" title="Squishymedia">Squishymedia</a>
+                        </span>
+                    </div>
+                    <div class="panel-body">
+                        Frontend Developer &amp; UX Designer
+                    </div>
+                </div>
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        May 2011 – Oct. 2012 -
+                        <span class="employer">
+                            <a href="http://www.eclipsemediasolutions.com/" title="Eclipse Media Solutions">Eclipse Media Solutions</a>
+                        </span>
+                    </div>
+                    <div class="panel-body">
+                        Designer and Frontend Developer
+                    </div>
+                </div>
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        March 2006 - Oct. 2011 -
+                        <span class="employer dis">Contractor</span>
+                    </div>
+                    <div class="panel-body">
+                        Photographer, Designer, and Frontend Developer
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
-  </div>
-  <ul class="skills-explained clearfix">
-    <li>Good old fashioned HTML</li>
-  </ul>
-
-
-  <div class="progress-label">CSS</div>
-  <div class="progress">
-    <div id="css-chart" class="progress-bar" role="progressbar">
-      <span class="sr-only">60% Complete</span>
-    </div>
-  </div>
-  <ul class="skills-explained clearfix">
-    <li>CSS</li>
-    <li>LESS/SASS</li>
-    <li>Responsive</li>
-    <li>Bootstrap</li>
-  </ul>
-
-  <div class="progress-label">Javascript</div>
-  <div class="progress">
-    <div id="js-chart" class="progress-bar" role="progressbar">
-      <span class="sr-only">60% Complete</span>
-    </div>
-  </div>
-  <ul class="skills-explained clearfix">
-    <li>Jquery</li>
-    <li>Backbone</li>
-    <li>Angular</li>
-    <li>Grunt</li>
-  </ul>
-
-  <div class="progress-label">Design</div>
-  <div class="progress">
-    <div id="design-chart" class="progress-bar" role="progressbar">
-      <span class="sr-only">60% Complete</span>
-    </div>
-  </div>
-  <ul class="skills-explained clearfix">
-    <li>Photoshop</li>
-    <li>Illustrator</li>
-    <li>Photography</li>
-    <li>Printmaking</li>
-  </ul>
-  <div class="progress-label">CMS</div>
-  <div class="progress">
-    <div id="cms-chart" class="progress-bar" role="progressbar">
-      <span class="sr-only">60% Complete</span>
-    </div>
-  </div>
-  <ul class="skills-explained clearfix">
-    <li>Drupal</li>
-    <li>Wordpress</li>
-    <li>Site Building</li>
-    <li>Theming</li>
-  </ul>
-  <div class="progress-label">Life</div>
-  <div class="progress">
-    <div id="life-chart" class="progress-bar" role="progressbar">
-      <span class="sr-only">60% Complete</span>
-    </div>
-  </div>
-  <ul class="skills-explained clearfix">
-    <li>Husband</li>
-    <li>Pet Owner</li>
-    <li>Pinball</li>
-    <li>Outside Stuff</li>
-  </ul>
-</div>
-
-<div class="col-sm-5 col-sm-offset-1">
- <h2>Experience</h2>
-
-  <div class="panel panel-default">
-
-    <div class="panel-heading">
-      Current Position  - 
-      <span class="employer">
-        <a href="http://www.squishymedia.com/" title="Squishymedia">Squishymedia</a>
-      </span>
-    </div>
-    <div class="panel-body">
-      Senior Frontend Developer &amp; UX Designer
-    </div>
-    <div class="panel-heading">
-      Oct. 2012 - Jan. 2014 - 
-      <span class="employer">
-        <a href="http://www.squishymedia.com/" title="Squishymedia">Squishymedia</a>
-      </span>
-    </div>
-    <div class="panel-body">
-      Frontend Developer &amp; UX Designer
-    </div>
-  </div>
-
-  <div class="panel panel-default">
-    <div class="panel-heading">
-      May 2011 – Oct. 2012 - 
-      <span class="employer">
-        <a href="http://www.eclipsemediasolutions.com/" title="Eclipse Media Solutions">Eclipse Media Solutions</a>
-      </span>
-    </div>
-    <div class="panel-body">
-      Designer and Frontend Developer
-    </div>
-  </div>
-  
-  <div class="panel panel-default">
-    <div class="panel-heading">
-      March 2006 - Oct. 2011 - 
-      <span class="employer dis">Contractor</span>
-
-    </div>
-    <div class="panel-body">
-      Photographer, Designer, and Frontend Developer 
-    </div>
-  </div>
-
-</div>
-
-</div>
-
-
-</div>
 </div>
