--- a/thinknoack/_layouts/tag_index.html
+++ b/thinknoack/_layouts/tag_index.html
@@ -3,32 +3,21 @@ layout: not-front
 ---
 <h2 class="post-title">{{page.tagpost_title}}</h2>
 <div class="row">
-<section id="workSection" class="show">
-  <div id="workContent" class="tagsPage">
-  {% assign count = '0' %} 
-  {% for post in site.posts %}
-  {% for tag in post.tags %}
-  {% if tag == page.tag %}
-  {% capture count %}{{ count | plus: '1' }}{% endcapture %}
-      <div id="post{{count}}" class="col-sm-4 col-md-4 col-lg-3 workblock grid">
-        <figure class="{{post.className}} ">
-          <img src="{{ post.teaser-img | prepend: site.baseurl }}" alt="{{post.title}}"/>
-          <figcaption>
-            <h2>{{ post.title }}</h2>
-            <p class="hidden-sm">{{post.teaser}}</p>
-            <div class="clearfix">
-              <small class="client"><span>Client:</span> {{post.client}}</small>
-              <small class="postType">{{post.className}}</small>
+    <section id="workSection" class="show tags">
+        <div id="workContent" class="tagsPage">
+            <div class="siteblock">
+            {% assign count = '0' %} 
+            {% for post in site.posts %}
+            {% for tag in post.tags %}
+            {% if tag == page.tag %}
+            {% capture count %}{{ count | plus: '1' }}{% endcapture %}
+            {% include portfolio-layout.html %}
+            {% endif %}
+            {% endfor %}
+            {% endfor %}
             </div>
-            <a  class="view-post" href="{{ post.url | prepend: site.baseurl }}">View</a>
-          </figcaption>     
-        </figure>
-      </div>
-  {% endif %}
-  {% endfor %}
-  {% endfor %}
-  </div>
-</section>
+        </div>
+    </section>
 </div>
 
 
