--- a/thinknoack/_includes/port.html
+++ b/thinknoack/_includes/port.html
@@ -1,68 +1,56 @@
 <!-- our work Section -->
 <section id="port" class="content-section">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-12 port-head">
-          <div class="row">
-            <div class="col-xs-12 col-sm-6">
-              <h2>Portfolio</h2>
+    <section id="workSection" class="show">
+        <div class="container">
+            <div class="col-md-12 port-head">
+                <div class="sidebar row clearfix">
+                    <div class="col-md-2">
+                        <h2>Portfolio</h2>
+                    </div>
+                    <div class="col-md-10 filters">
+                        <ul>
+                            <li id="all" class="filter workOpen active">
+                                All
+                            </li>
+                            <li id="site" class="filter workOpen">
+                                Sites
+                            </li>
+                            <li id="design" class="filter workOpen">
+                                Design
+                            </li>
+                        </ul>
+                    </div>
+                </div>
             </div>
-            <div class="col-xs-12 col-sm-6 filters">
-              <span id="all" class="filter workOpen active">
-                <!-- <img src="{{post.teaser-img}}" alt="{{post.title}}"/> -->
-                All
-              </span>
-              <span id="site" class="filter workOpen">
-                <!-- <img src="{{post.teaser-img}}" alt="{{post.title}}"/> -->
-                Sites
-              </span>
-              <span id="design" class="filter workOpen">
-                <!-- <img src="{{post.teaser-img}}" alt="{{post.title}}"/> -->
-                Design
-              </span>
-            </div>
-          </div>
-      </div>
-    </div>
-  </div>
-</section>
-<section id="workSection" class="show">
-  <div id="workContent" class="container animated allInner open">
-    <div class="row siteblock">
-    {% assign count = '0' %} 
-    {% for post in site.posts limit: 16 %}
-    {% capture count %}{{ count | plus: '1' }}{% endcapture %}
-      <div id="post{{count}}" class="col-sm-4 col-md-4 col-lg-3 workblock grid">
-        <figure class="{{post.className}} ">
-          <img src="{{ post.teaser-img | prepend: site.baseurl }}" alt="{{post.title}}"/>
-          <figcaption>
-            <h2>{{ post.title }}</h2>
-            <p class="hidden-sm">{{post.teaser}}</p>
-            <div class="clearfix">
-              <small class="client"><span>Client:</span> {{post.client}}</small>
-              <small class="postType">{{post.className}}</small>
-            </div>
-            <a  class="view-post" href="{{ post.url | prepend: site.baseurl }}">View</a>
-          </figcaption>     
-        </figure>
-      </div>
-    {% endfor %}
-    </div>
-    <div id="oldWorkSection">
-      <div class="row">
-        <div class="port-older-work-header"><h2>Older Work</h2></div>
-        {% for post in site.posts offset: 16 %}
-        <div class="col-sm-4 col-md-4 col-lg-3 workblock grid">
-          <figure class="effect-bubba {{post.className}} ">
-           <!--  <img src="{{ post.teaser-img | prepend: site.baseurl }}" alt="{{post.title}}"/> -->
-            <figcaption>
-              <h3>{{ post.title }}</h3>
-              <a  class="view-post" href="{{ post.url | prepend: site.baseurl }}">View</a>
-            </figcaption>     
-          </figure>
         </div>
-        {% endfor %}
-      </div>
-    </div>
-  </div>
+        <div id="workContent" class="animated allInner open">
+            <div class="container">
+                <div class="col-md-12">
+                    <div class="siteblock clearfix">
+                        {% assign count = '0' %}
+                        {% for post in site.posts limit: 15 %}
+                        {% capture count %}{{ count | plus: '1' }}{% endcapture %}
+                        {% include portfolio-layout.html %}
+                        {% endfor %}
+                    </div>
+                </div>
+            </div>
+            <div class="old-work-wrap">
+                <div class="container">
+                    <div class="col-md-12">
+                        <section>
+                            <div>
+                                <div id="oldWorkSection">
+                                    <h2>Older Work</h2>
+                                    {% for post in site.posts offset: 15 %}
+                                    {% include portfolio-old.html %}
+                                    {% endfor %}
+                                </div>
+                            </div>
+                        </section>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 </section>
