--- a/thinknoack/_layouts/post.html
+++ b/thinknoack/_layouts/post.html
@@ -1,60 +1,58 @@
 <!DOCTYPE html>
 <html>
-  {% include head.html %}
-  <body class="post">
-    {% include postNav.html %}
-    <!-- Intro Header -->
-    <header class="postIntro">
-        {% if page.header-img %}<img class="post-header-img" src="{{page.header-img | prepend: site.baseurl }}" alt="{{page.title}} post-img">{% endif %}
-        <div class="chev animated fadeInLeftBig visibleAn">
-          <div class="inner"></div>
-        </div>
-        <div class="intro-body ">
-            <div class="container value_intro">
-                <div class="row">
-                    <div class="col-md-4">
-                        <h1 class="brand-heading">{{page.title}}<br>
-                          <small class="client">Client: 
-                            {% if page.siteurl %}
-                            <a href="{{page.siteurl}}" target="_blank">{{page.client}}</a>
-                            {% else %}
-                            {{page.client}}
-                            {% endif %}
-                          </small>
-                        </h1>
+{% include head.html %}
+    <body class="post">
+        {% include postNav.html %}
+        <!-- Intro Header -->
+        <header class="postIntro" {% if page.post-header %}style="background-image:url('{{ page.post-header}}')"{% endif %}>
+            {% if page.header-img %}<img class="post-header-img" src="{{page.header-img | prepend: site.baseurl }}" alt="{{page.title}} post-img">{% endif %}
+            <div class="chev animated fadeInLeftBig visibleAn">
+                <div class="inner"></div>
+            </div>
+            <div class="intro-body ">
+                <div class="container value_intro">
+                    <div class="row">
+                        <div class="col-md-4">
+                            <h1 class="brand-heading">{{page.title}}<br>
+                                <small class="client">Client: 
+                                    {% if page.siteurl %}
+                                    <a href="{{page.siteurl}}" target="_blank">{{page.client}}</a>
+                                    {% else %}
+                                    {{page.client}}
+                                    {% endif %}
+                                </small>
+                            </h1>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
-    </header>
-      <div class="container content-section">
-        <div class="row">
-          
-          <div class="col-sm-5 post-text">
-            <div class="col-sm-12">&nbsp;</div>
-            <div>
-              <h3>{{page.teaser}}</h3>
-              <p>{{content}}</p>
-                {% if tag == page.tag %}
-                <small>tags:</small>
-                  <ul class="nav nav-pills nav-tags">
-                    {% for tag in page.tags %}
-                    <li><a class="tag_list_link" href="/tag/{{ tag }}" title="{{ tag }}">{{ tag }}</a></li>
-                    {% endfor %}
-                  </ul>
-                {% endif %}
+        </header>
+        <div class="container content-section">
+            <div class="row">
+                <div class="col-sm-5 post-text">
+                    <div class="col-sm-12">&nbsp;</div>
+                    <div>
+                        <h3>{{page.teaser}}</h3>
+                        <p>{{content}}</p>
+                        {% if tag == page.tag %}
+                        <small>tags:</small>
+                        <ul class="nav nav-pills nav-tags">
+                            {% for tag in page.tags %}
+                            <li><a class="tag_list_link" href="/tag/{{ tag }}" title="{{ tag }}">{{ tag }}</a></li>
+                            {% endfor %}
+                        </ul>
+                        {% endif %}
+                    </div>
+                </div>
+                <div class="col-sm-7 post-img">
+                    <img src="{{page.post-img | prepend: site.baseurl }}" alt="{{page.title}}" />
+                    {% if page.post-img2 %} <img src="{{page.post-img2 | prepend: site.baseurl }}" alt="{{page.title}}" />{% endif %}
+                    {% if page.post-img3 %} <img src="{{page.post-img3 | prepend: site.baseurl }}" alt="{{page.title}}" />{% endif %}
+                    {% if page.post-img4 %} <img src="{{page.post-img4 | prepend: site.baseurl }}" alt="{{page.title}}" />{% endif %}
+                </div>
             </div>
-          </div>
-          <div class="col-sm-7 post-img">
-            <img src="{{page.post-img | prepend: site.baseurl }}" alt="{{page.title}}" />
-            {% if page.post-img2 %} <img src="{{page.post-img2 | prepend: site.baseurl }}" alt="{{page.title}}" />{% endif %}
-            {% if page.post-img3 %} <img src="{{page.post-img3 | prepend: site.baseurl }}" alt="{{page.title}}" />{% endif %}
-            {% if page.post-img4 %} <img src="{{page.post-img4 | prepend: site.baseurl }}" alt="{{page.title}}" />{% endif %}
-          </div>
-         </div>
         </div>
-    {% include footer.html %}
-    {% include scripts.html %}
-
-  </body>
+        {% include footer.html %}
+        {% include scripts.html %}
+    </body>
 </html>
