adding new category and pages

--- a/thinknoack/_includes/port.html
+++ b/thinknoack/_includes/port.html
@@ -3,7 +3,7 @@
     <section id="workSection" class="show">
         <div class="container">
             <div class="col-md-12 port-head">
-                <div class="sidebar row clearfix">
+                <div class="row clearfix">
                     <div class="col-md-2">
                         <h2>Portfolio</h2>
                     </div>
@@ -17,6 +17,9 @@
                             </li>
                             <li id="design" class="filter workOpen">
                                 Design
+                            </li>
+                            <li id="playground" class="filter workOpen">
+                                Playground
                             </li>
                         </ul>
                     </div>
