adding changes to site and new posts

--- a/thinknoack/_includes/intro.html
+++ b/thinknoack/_includes/intro.html
@@ -17,8 +17,8 @@
                 </div>
             </div>
         </div>
-        <a href="#scroll-intro" id="scroll-intro" class="btn btn-circle page-scroll">
+<!--         <a href="#scroll-intro" id="scroll-intro" class="btn btn-circle page-scroll">
             <i class="fa fa-angle-down animated"></i>
-        </a>
+        </a> -->
     </div>
 </header>
