--- a/thinknoack/_includes/skills.html
+++ b/thinknoack/_includes/skills.html
@@ -75,7 +75,7 @@
                     <li>Outside Stuff</li>
                 </ul>
             </div>
-            <div class="col-sm-5 col-sm-offset-1">
+            <div class="col-sm-6">
                 <h2>Experience</h2>
                 <div class="panel panel-default">
                     <div class="panel-heading">
