adding changes to the theme layer

--- a/thinknoack/_includes/portfolio-layout.html
+++ b/thinknoack/_includes/portfolio-layout.html
@@ -8,7 +8,7 @@
                 <small class="hidden-sm hidden-md client"><span>Client:</span> {{post.client}}</small>
             </div>
         </figcaption>
-        <small class="postType">{{post.className}}</small>
+        <!-- <small class="postType">{{post.className}}</small> -->
         <a  class="view-post" href="{{ post.url | prepend: site.baseurl }}">View</a>
     </figure>
 </div>
